--- a/theme.yaml
+++ b/theme.yaml
@@ -24,5 +24,5 @@ spec:
   repo: "https://github.com/jiewenhuang/halo-theme-stack"
   settingName: "theme-Stack2-setting"
   configMapName: "theme-Stack2-configMap"
-  version: "2.2.6"
+  version: "2.2.6-longjuan.24.07.07"
   requires: ">=2.17.0"
